--- a/src/Abc.Zebus.Directory/Abc.Zebus.Directory.csproj
+++ b/src/Abc.Zebus.Directory/Abc.Zebus.Directory.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Abc.Zebus\Abc.Zebus.csproj" />
+    <ProjectReference Include="..\Abc.Zebus.StructureMap\Abc.Zebus.StructureMap.csproj" />
   </ItemGroup>
 
   <ItemGroup>
