--- a/src/Abc.Zebus.Testing/Abc.Zebus.Testing.csproj
+++ b/src/Abc.Zebus.Testing/Abc.Zebus.Testing.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Abc.Zebus\Abc.Zebus.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="CompareNETObjects" Version="4.71.0" />
     <PackageReference Include="Moq" Version="4.17.2" />
@@ -23,6 +19,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Pack>false</Pack>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Abc.Zebus.StructureMap\Abc.Zebus.StructureMap.csproj" />
   </ItemGroup>
 
 </Project>
